--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,6 @@
   </head>
   <body>
     <!-- TODO(you): Add the HTML necessary to complete your final project. -->
+    <h1>Final Test Page</h1>
   </body>
 </html>
