--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <!-- TODO(you): Add the HTML necessary to complete your final project. -->
-    <h1>Final Test Page</h1>
+    <h1>Final Test Page after push</h1>
   </body>
 </html>
