finish front-end

--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>CS193x Final Project</title>
-    <link rel="stylesheet" href="/css/style.css"/>
-    <script src="/js/script.js" defer></script>
-    </script>
+    <title>Nian's Final Project</title>
+    <link rel="stylesheet" href="./css/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway|Roboto+Condensed&display=swap" rel="stylesheet">
+    <script src="./js/home.js" defer></script>
+    <script src="./js/script.js" defer></script>
   </head>
+
   <body>
-    <!-- TODO(you): Add the HTML necessary to complete your final project. -->
-    <h1>Final Test Page after push</h1>
+    <div class="flex-container-column full-page">
+      <div class="title">Create a New Journal</div>
+      <button id="create">CREATE A NEW JOURNAL</button>
+    </div>
   </body>
 </html>
