Add Journal-Book-Div in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,22 @@
 
   <body>
     <div class="flex-container-column full-page">
-      <div class="title">Create a New Journal</div>
-      <button id="create">CREATE A NEW JOURNAL</button>
+      <div class="title">Choose a Journal</div>
+      <div class="flex-container">
+        <div class="journal journal-flex-container">
+          <div class="journal-binding-side"></div>
+          <div class="journal-title">Winnie the Pooh</div>
+        </div>
+        <div class="journal journal-flex-container">
+          <div class="journal-binding-side"></div>
+          <div class="journal-title">Study Plan</div>
+        </div>
+        <div class="journal journal-flex-container">
+          <div class="journal-binding-side"></div>
+          <div class="journal-title">Travel</div>
+        </div>
+      </div>
+      <button id="create">CREATE NEW ONE</button>
     </div>
   </body>
 </html>
