--- a/public/id/dairy.html
+++ b/public/id/dairy.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<div id="entry-show" class="flex-container-column full-page">
+<div id="entry-show-screen" class="flex-container-column full-page">
     <div class="flex-container-column title">
         <div>Journal</div>
     </div>
@@ -26,7 +26,7 @@
         <div id="entry-text"></div>
     </div>
 </div>
-<div id="entry-edit" class="flex-container-column full-page inactive">
+<div id="entry-edit-screen" class="flex-container-column full-page inactive">
     <div id="edit-card" class="flex-container-column">
         <div id="card-date">June 12</div>
         <textarea id="edit-area"></textarea>
