add flex container of entryText into EntryShowScreen

--- a/public/id/dairy.html
+++ b/public/id/dairy.html
@@ -23,7 +23,9 @@
             <div id="forward" class="myButton"></div>
         </div>
         <div class="divideLine"></div>
-        <div id="entry-text"></div>
+        <div id="entry-text-container" class="flex-container-column">
+            <div id="entry-text"></div>
+        </div>
     </div>
 </div>
 <div id="entry-edit-screen" class="flex-container-column full-page inactive">
