finish customized journal name

--- a/public/id/dairy.html
+++ b/public/id/dairy.html
@@ -14,7 +14,7 @@
 <body>
 <div id="entry-show-screen" class="flex-container-column full-page">
     <div class="flex-container-column title">
-        <div>Journal</div>
+        <div id="back-to-home">Journal</div>
     </div>
     <div class="card-flex-container card">
         <div class="flex-container" id="controlBar">
