--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Nian's Final Project</title>
     <link rel="stylesheet" href="./css/style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Raleway|Roboto+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Noto+Sans+TC|Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="./js/home.js" defer></script>
     <script src="./js/script.js" defer></script>
   </head>
