--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="flex-container-column full-page">
-      <div class="title">Choose a Journal</div>
+      <div class="title">Nian's Journal</div>
       <div id="journal-container" class="flex-container">
         <!-- Journal Book Sample -->
         <!-- <div class="journal journal-flex-container"> -->
