--- a/public/id/daily.html
+++ b/public/id/daily.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Nian's Final Project</title>
-    <link rel="stylesheet" href="../css/style.css"/>
+    <link rel="stylesheet" href="../css/daily.css"/>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Lobster|PT+Sans|Raleway|Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="../js/editEntry.js" defer></script>
     <script src="../js/showEntry.js" defer></script>
