--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title>Nian's Final Project</title>
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/index.css"/>
     <link href="https://fonts.googleapis.com/css?family=Lobster|Noto+Sans+TC|Roboto+Condensed&display=swap" rel="stylesheet">
     <script src="./js/home.js" defer></script>
     <script src="./js/script.js" defer></script>
